@@ -22,19 +22,20 @@ public class ProyectoFinalQaApplication {
 	public CommandLineRunner loadData(UsuarioRepository usuarioRepository, PasswordEncoder passwordEncoder){
 		System.out.println("Inicializando los datos.");
 		return args -> {
+			if (usuarioRepository.count() == 0){
+				//Cargando la información.
+				Usuario admin = new Usuario();
+				admin.setUserName("admin");
+				admin.setPassword(passwordEncoder.encode("admin"));
+				admin.setRoles(Arrays.asList("ROLE_ADMIN", "ROLE_USER", "ROLE_INVITADO"));
+				usuarioRepository.save(admin);
 
-			//Cargando la información.
-			Usuario admin = new Usuario();
-			admin.setUserName("admin");
-			admin.setPassword(passwordEncoder.encode("admin"));
-			admin.setRoles(Arrays.asList("ROLE_ADMIN", "ROLE_USER", "ROLE_INVITADO"));
-			usuarioRepository.save(admin);
-
-			Usuario user = new Usuario();
-			user.setUserName("user");
-			user.setPassword(passwordEncoder.encode("user"));
-			user.setRoles(List.of("ROLE_USER"));
-			usuarioRepository.save(user);
+				Usuario user = new Usuario();
+				user.setUserName("user");
+				user.setPassword(passwordEncoder.encode("user"));
+				user.setRoles(List.of("ROLE_USER"));
+				usuarioRepository.save(user);
+			}
 		};
 	}
 
